# Lumina-Stream

./: .gitignore  README.md  gen.sh
go-orchestrator/: go.mod  go.sum  main.go
go-orchestrator/configs/: config.dev.yaml  orchestrator.yaml
go-orchestrator/internal/grcp_clinet/: client.go
go-orchestrator/internal/grpc_clinet/: client.go
go-orchestrator/internal/schemas/: schema.go
go-orchestrator/internal/splitter/: split.go  splitter_pool.go
go-orchestrator/internal/watcher/: watch.go
go-orchestrator/pb/: embedding.pb.go  embedding_grpc.pb.go
go-orchestrator/utils/: config_schemas.go  handle_configs.go  handle_logs.go
proto/: embedding.proto
python-embedder/: .gitignore  main.py  pyproject.toml
python-embedder/app/: __init__.py  model.py  service.py
python-embedder/configs/: config.dev.yaml
python-embedder/configs/environments/: config.dev.yaml
python-embedder/pb/: embedding_pb2.py  embedding_pb2.pyi  embedding_pb2_grpc.py
python-embedder/utils/: __init__.py  handle_configs.py  handle_logs.py
