[project]
name = "python-embedder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio-tools>=1.80.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "sentence-transformers>=5.3.0",
]
